[package]
edition = "2021"
name = "dot15d4-driver"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[dependencies]
dot15d4-util = { version = "0.0.1", path = "../dot15d4-util", default-features = false }

critical-section = "1.2"
generic-array = "1.2"
typenum = "1.18"

cortex-m = { version = "0.7", features = [
    "critical-section-single-core",
], optional = true }
nrf52840-hal = { version = "0.18", optional = true }
nrf52811-hal = { version = "0.18", optional = true }
nrf5340-net-hal = { version = "0.18", optional = true }
nrf-hal-common = { version = "0.18", optional = true }

log = { version = "0.4.21", optional = true }

rtos-trace = { git = "https://gitlab.com/fgcfh/rtos-trace.git", branch = "dev", optional = true }

arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

[features]
nrf = ["dep:nrf-hal-common", "dep:cortex-m"]
nrf52840 = ["dep:nrf52840-hal", "nrf"]
nrf52811 = ["dep:nrf52811-hal", "nrf"]
nrf5340-net = ["dep:nrf5340-net-hal", "nrf"]

log = ["dep:log", "dot15d4-util/log"]
defmt = ["dot15d4-util/defmt"]

rtos-trace = ["dep:rtos-trace", "log"]

std = []
fuzz = ["dep:arbitrary"]

_clippy-std = ["std", "fuzz"]
_clippy-no-std = ["nrf52840", "rtos-trace"]
