[package]
edition = "2021"
name = "dot15d4-util"
version = "0.0.1"
license = "MIT OR Apache-2.0"

[dependencies]
allocator-api2 = { version = "0.3", default-features = false }
bitmaps = { version = "3.2", default-features = false }
generic-array = "1.2"
heapless = "0.8"
static_cell = "2.1"
typenum = "1.18"

defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }

rtos-trace = { version = "0.2", optional = true }
systemview-target = { version = "0.2", features = [
    "log",
    "callbacks-app",
    "callbacks-os",  # required for embassy integration
], optional = true }

[dev-dependencies]
embassy-executor = { git = "https://github.com/fg-cfh/embassy.git", branch = "rtos-trace", features = [
    "executor-thread",
    "arch-std",
] }
embassy-time = { git = "https://github.com/fg-cfh/embassy.git", branch = "rtos-trace", features = [
    "std",
] }
embedded-hal-async = "1.0"
env_logger = "0.11"
heapless = "0.8"
log = "0.4"
pollster = { version = "0.4", features = ["macro"] }
rand = "0.9"

[features]
std = ["bitmaps/std", "allocator-api2/std"]

defmt = ["dep:defmt"]
log = ["dep:log"]

rtos-trace = [
    "dep:rtos-trace",
    "dep:systemview-target",
    "embassy-executor/rtos-trace",
    "log",
]

_clippy-std = ["std"]
_clippy-no-std = ["rtos-trace"]

[[example]]
name = "sync-channel-buffered"
path = "examples/sync/channel/buffered.rs"

[[example]]
name = "sync-channel-mpmc"
path = "examples/sync/channel/mpmc.rs"

[[example]]
name = "sync-channel-mpsc"
path = "examples/sync/channel/mpsc.rs"
