[package]
name = "dot15d4"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/thvdveld/dot15d4"
description = "IEEE 802.15.4 implementation in Rust"
license = "MIT OR Apache-2.0"
categories = ["embedded", "network-programming", "no-std"]
keywords = ["ieee802154", "WPAN", "smoltcp"]

[dependencies]
dot15d4-util = { version = "0.0.1", path = "../dot15d4-util" }
dot15d4-driver = { version = "0.0.1", path = "../dot15d4-driver", features = [
    "nrf52840",
] }
dot15d4-frame = { version = "0.0.1", path = "../dot15d4-frame", default-features = false }

log = { version = "0.4.21", optional = true }
defmt = { version = "1.0", optional = true }

critical-section = "1.1"
paste = "1.0"
rand_core = { version = "0.6.4", default-features = false } # version 0.6.4 required by embassy
heapless = { version = "0.8.0" }

arbitrary = { version = "1.3.2", features = ["derive"], optional = true }

rtos-trace = { version = "0.2", optional = true }

[features]
default = ["security", "ies", "dot15d4-frame/strict"]

## Enable std-only features
std = ["log", "critical-section/std"]

## Use tracing for logging
log = ["dep:log", "dot15d4-util/log"]

## Use defmt for logging
defmt = ["dep:defmt", "dot15d4-util/defmt"]

## Enable fuzzing
fuzz = ["dep:arbitrary"]

# Support for security
security = ["dot15d4-frame/security"]

# Support for information elements
ies = ["dot15d4-frame/ies"]

# Tracing
rtos-trace = ["dep:rtos-trace", "log"]

_clippy-std = ["std", "fuzz"]
_clippy-no-std = ["rtos-trace"]
